transaction-service/k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service-stg-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-stg-service
  template:
    metadata:
      labels:
        app: transaction-stg-service
    spec:
      containers:
        - name: transaction-stg-service
          image: transaction-service-dev
          imagePullPolicy: Never
          ports:
            - containerPort: 3008
          workingDir: /app   
          command: ["npm", "run", "start" ]
